@@ -9,7 +9,6 @@ Chris:
   
 Morten:
 
-* Are SQL export features complete and documented?
 * Spires fetcher: needs some documentation on search queries
 * Open spires entry: ("openSpires" action). Think about better integration of this?
 * [NOT COMPATIBLE] Look into submitted PDF downloader (d/l through Google)
